src/main/helm/netpol/np-denyall-persistence.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: persistence
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
