src/main/helm/netpol/np-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: conference-frontend
  namespace: conference
spec:
  podSelector:
    matchLabels:
      name: conference-frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: conference-backend
    ports:
    - protocol: TCP
      port: 80
