src/main/helm/netpol/np-neo4j.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: neo4j
  namespace: persistence
spec:
  podSelector:
    matchLabels:
      app: neo4j
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: conference
      podSelector:
        matchLabels:
          name: conference-backend
    - namespaceSelector:
        matchLabels:
          name: conference
      podSelector:
        matchLabels:
          name: conference-data
    ports:
    - protocol: TCP
      port: 7687
    - protocol: TCP
      port: 7474
